--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '26.1.4'
 
 services:
   # PHP
@@ -8,9 +8,6 @@ services:
       target: php
       args:
         - APP_ENV=${APP_ENV}
-    environment:
-      - APP_ENV=${APP_ENV}
-      - CONTAINER_ROLE=app
     working_dir: /var/www
     volumes:
       - ./:/var/www
@@ -18,8 +15,6 @@ services:
       - 8000:8000
     depends_on:
       - database
-      - redis
-
   # MySQL
   database:
     image: mysql:5.7.16
@@ -33,11 +28,11 @@ services:
     volumes:
       - db-data:/var/lib/mysql
     
-    # Redis Server
-  redis:
-    image: redis:alpine
-    command: redis-server --appendonly yes --requirepass "${REDIS_PASSWORD}"
-    ports:
-     - 6379:6379
+  #   # Redis Server
+  # redis:
+  #   image: redis:alpine
+  #   command: redis-server --appendonly yes --requirepass "${REDIS_PASSWORD}"
+  #   ports:
+  #    - 6379:6379
 volumes:
   db-data: ~
